[package]
name = "commentstats"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.58"
bincode = { version = "2.0.0-rc.1", features = ["serde"] }
chrono = { version = "0.4.19", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "3.2.14", features = ["derive"] }
git2 = { version = "0.14.4", default-features = false }
itertools = "0.10.3"
pbr = "1.0.4"
plotters = { version = "0.3.2", default-features = false, features = [
    "datetime",
    "line_series",
    "svg_backend",
] }
rayon = "1.5.3"
serde = { version = "1.0.140", features = ["derive"] }
tempfile = "3.3.0"
tokei = "12.1.2"
zip = { version = "0.6.2", default-features = false }
zstd = { version = "0.11.2", default-features = false }

[profile.release]
lto = true
strip = true
