[package]
name = "commentstats"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.80"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
chrono = { version = "0.4.34", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4.5.1", features = ["derive"] }
git2 = { version = "0.18.2", default-features = false }
pbr = "1.1.1"
poloto = "19.1.2"
poloto-chrono = "0.4.0"
rayon = "1.9.0"
serde = { version = "1.0.197", features = ["derive"] }
tempfile = "3.10.1"
tokei = "12.1.2"
zip = { version = "0.6.6", default-features = false }
zstd = { version = "0.13.0", default-features = false }

[profile.release]
lto = "thin"
strip = true
